adding grids layout

--- a/index.html
+++ b/index.html
@@ -65,43 +65,44 @@
 
     <h4>Add your beautiful pictures here and view them with compatibility on every screen.</h4>
 
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="#">
-                <img src="images/taj.jpg" alt="Cinque Terre" width="600" height="400">
-            </a>
-            <div class="desc">Add a description of the image here</div>
+    <div style="display: grid; grid-template-columns: 1fr 1fr;">
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="#">
+                    <img src="images/taj.jpg" alt="Cinque Terre" width="600" height="400">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+        </div>
+
+
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="#">
+                    <img src="images/hawamahal.jpg" alt="Forest" width="600" height="400">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+        </div>
+
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="#">
+                    <img src="images/redfort.jpg" alt="Northern Lights" width="600" height="400">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
+        </div>
+
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="#">
+                    <img src="images/imambda.jpg" alt="Mountains" width="600" height="400">
+                </a>
+                <div class="desc">Add a description of the image here</div>
+            </div>
         </div>
     </div>
-
-
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="#">
-                <img src="images/hawamahal.jpg" alt="Forest" width="600" height="400">
-            </a>
-            <div class="desc">Add a description of the image here</div>
-        </div>
-    </div>
-
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="#">
-                <img src="images/redfort.jpg" alt="Northern Lights" width="600" height="400">
-            </a>
-            <div class="desc">Add a description of the image here</div>
-        </div>
-    </div>
-
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="#">
-                <img src="images/imambda.jpg" alt="Mountains" width="600" height="400">
-            </a>
-            <div class="desc">Add a description of the image here</div>
-        </div>
-    </div>
-
 
 </body>
 </html>
