--- a/index.html
+++ b/index.html
@@ -2,107 +2,120 @@
 <html>
     <head>
         <style>
-            div.gallery {
-                border: 1px solid #ccc;
+
+            .main_container{
+                border: 1px solid rgb(20, 20, 18);
+                padding: 5px;
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                row-gap: 10px;
+                column-gap: 10px;
             }
 
-            div.gallery:hover {
-                border: 1px solid #777;
+            .container{
+                border: 1px solid red;
+                padding: 5px;
             }
 
-            div.gallery img {
+            .container_image{
                 width: 100%;
-                height: auto;
+                height: 350px;
             }
 
-            div.desc {
-                padding: 15px;
-                text-align: center;
+            .desc{
+                padding: 3px;
             }
 
-            * {
-                box-sizing: border-box;
+            @media only screen and (max-width: 1350px) {
+                .container_image{
+                width: 100%;
+                height: 250px;
+            }
             }
 
-            .responsive {
-                padding: 0 6px;
-                float: left;
-                width: 24.99999%;
-            }
-
-            /* @media only screen and (max-width: 1000px) {
-                .responsive {
-                    width: 33%;
-                    margin: 6px 0;
+            @media only screen and (max-width: 1150px) {
+                .main_container{
+                    grid-template-columns: 1fr 1fr;
                 }
-            } */
-
-            @media only screen and (max-width: 870px) {
-                .responsive {
-                    width: 49.99999%;
-                    margin: 6px 0;
-                }
-            }
-
-            @media only screen and (max-width: 600px) {
-                .responsive {
+                .container_image {
                     width: 100%;
+                    height: 300px;
                 }
             }
 
-            .clearfix:after {
-                content: "";
-                display: table;
-                clear: both;
+            @media only screen and (max-width: 950px) {
+                .main_container{
+                    grid-template-columns: 1fr 1fr;
+                }
+                .container_image {
+                    width: 100%;
+                    height: 280px;
+                }
             }
+
+            @media only screen and (max-width: 850px) {
+                .main_container{
+                    grid-template-columns: 1fr 1fr;
+                }
+                .container_image {
+                    width: 100%;
+                    height: 260px;
+                }
+            }
+            
+            @media only screen and (max-width: 750px) {
+                .main_container{
+                    grid-template-columns: 1fr 1fr;
+                }
+                .container_image {
+                    width: 100%;
+                    height: 240px;
+                }
+            }
+            
+            @media only screen and (max-width: 600px) {
+                .main_container{
+                    grid-template-columns: 1fr;
+                }
+                .container_image {
+                    width: 100%;
+                    height: 350px;
+                }
+            }
+
         </style>
     </head>
-<body>
 
-    <div>
-        <h1>Image Gallery</h1>
-    </div>
-
-    <h4>Add your beautiful pictures here and view them with compatibility on every screen.</h4>
-
-    <div style="display: grid; grid-template-columns: 1fr 1fr;">
-        <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="#">
-                    <img src="images/taj.jpg" alt="Cinque Terre" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
+    <body>
+        <main>
+            <div>
+                <h1>Image Gallery</h1>
+                <h3>Add your beautiful pictures here and view them with compatibility on every screen.</h3>
             </div>
-        </div>
 
+            <div class="main_container">
 
-        <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="#">
-                    <img src="images/hawamahal.jpg" alt="Forest" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
+                <div class="container">
+                    <img class="container_image" src="images/hawamahal.jpg" alt="Hawa Mahal">
+                    <div class="desc">This is description of Hawa Mahal.</div>
+                </div>
+
+                <div class="container">
+                    <img class="container_image" src="images/mysurupalace.jpg" alt="Hawa Mahal">
+                    <div class="desc">This is description of Hawa Mahal.</div>
+                </div>
+
+                <div class="container">
+                    <img class="container_image" src="images/redfort.jpg" alt="Hawa Mahal">
+                    <div class="desc">This is description of Hawa Mahal.</div>
+                </div>
+
+                <div class="container">
+                    <img class="container_image" src="images/imambda.jpg" alt="Hawa Mahal">
+                    <div class="desc">This is description of Hawa Mahal.</div>
+                </div>
+
             </div>
-        </div>
-
-        <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="#">
-                    <img src="images/redfort.jpg" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-        </div>
-
-        <div class="responsive">
-            <div class="gallery">
-                <a target="_blank" href="#">
-                    <img src="images/imambda.jpg" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-        </div>
-    </div>
-
-</body>
+        </main>
+    </body>
 </html>
