--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
         <header>
             <nav>
-                <div></div>
+                <div class="navbar">
+                    <a href="#"><div class="navbar_content">Home</div></a>
+                    <a href="#"><div class="navbar_content">Home</div></a>
+                    <a href="#"><div class="navbar_content">Home</div></a>
+                    <a href="#"><div class="navbar_content">Home</div></a>
+                </div>
             </nav>
         </header>
 
@@ -46,10 +51,17 @@
 
         <footer>
             <div class="footer">
-                <div class="footer_address">Registered Address: Shri Sai Balaji, Kundanahalli Colony, Whitefield, Bengaluru, Karnataka (560048) </div>
+                <div class="footer_links">
+                    <div><img class="footer_icon" src="images/facebook.png"></div>
+                    <div><img class="footer_icon" src="images/gmail.png"></div>
+                    <div><img class="footer_icon" src="images/instagram.png"></div>
+                    <div><img class="footer_icon" src="images/twitter.png"></div>
+                    <div><img class="footer_icon" src="images/youtube.png"></div>
+                </div>
                 <div class="footer_container">imagegallery.com</div>
-                <div class="footer_links"></div>
+                <div class="footer_address">Registered Address: Sai Balaji, Kundanahalli Colony, Whitefield, Bengaluru, Karnataka (560048)</div>
             </div>
         </footer>
+
     </body>
 </html>
