added extra design

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <nav>
                 <div class="navbar">
                     <a href="#"><div class="navbar_content">Home</div></a>
-                    <a href="#"><div class="navbar_content">Home</div></a>
-                    <a href="#"><div class="navbar_content">Home</div></a>
-                    <a href="#"><div class="navbar_content">Home</div></a>
+                    <a href="#"><div class="navbar_content">Gallery</div></a>
+                    <a href="#"><div class="navbar_content">About</div></a>
+                    <a href="#"><div class="navbar_content">Contact</div></a>
                 </div>
             </nav>
         </header>
@@ -26,6 +26,16 @@
 
             <div class="main_container">
 
+                <div class="container">
+                    <img class="container_image" src="images/gateway.jpg" alt="Hawa Mahal">
+                    <div class="desc">This is description of Hawa Mahal.</div>
+                </div>
+
+                <div class="container">
+                    <img class="container_image" src="images/golden.jpg" alt="Hawa Mahal">
+                    <div class="desc">This is description of Hawa Mahal.</div>
+                </div>
+                
                 <div class="container">
                     <img class="container_image" src="images/hawamahal.jpg" alt="Hawa Mahal">
                     <div class="desc">This is description of Hawa Mahal.</div>
@@ -43,6 +53,11 @@
 
                 <div class="container">
                     <img class="container_image" src="images/imambda.jpg" alt="Hawa Mahal">
+                    <div class="desc">This is description of Hawa Mahal.</div>
+                </div>
+
+                <div class="container">
+                    <img class="container_image" src="images/lotustemple.jpg" alt="Hawa Mahal">
                     <div class="desc">This is description of Hawa Mahal.</div>
                 </div>
 
