updated index and added gallery

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <nav>
                 <div class="navbar">
                     <a href="#"><div class="navbar_content">Home</div></a>
-                    <a href="#"><div class="navbar_content">Gallery</div></a>
+                    <a href="gallery.html"><div class="navbar_content">Gallery</div></a>
                     <a href="#"><div class="navbar_content">About</div></a>
                     <a href="#"><div class="navbar_content">Contact</div></a>
                 </div>
@@ -19,48 +19,11 @@
         </header>
 
         <main>
+            <h2>One Stop For All of Yours Picture Collections</h2>
             <div>
-                <h1>Image Gallery</h1>
-                <h3>Add your beautiful pictures here and view them with compatibility on every screen.</h3>
-            </div>
-
-            <div class="main_container">
-
-                <div class="container">
-                    <img class="container_image" src="images/gateway.jpg" alt="Hawa Mahal">
-                    <div class="desc">This is description of Hawa Mahal.</div>
+                <div class="back_cont">
+                    <img class="backgroundimg" src="images/nature.jpg" alt="home_image">
                 </div>
-
-                <div class="container">
-                    <img class="container_image" src="images/golden.jpg" alt="Hawa Mahal">
-                    <div class="desc">This is description of Hawa Mahal.</div>
-                </div>
-                
-                <div class="container">
-                    <img class="container_image" src="images/hawamahal.jpg" alt="Hawa Mahal">
-                    <div class="desc">This is description of Hawa Mahal.</div>
-                </div>
-
-                <div class="container">
-                    <img class="container_image" src="images/mysurupalace.jpg" alt="Hawa Mahal">
-                    <div class="desc">This is description of Hawa Mahal.</div>
-                </div>
-
-                <div class="container">
-                    <img class="container_image" src="images/redfort.jpg" alt="Hawa Mahal">
-                    <div class="desc">This is description of Hawa Mahal.</div>
-                </div>
-
-                <div class="container">
-                    <img class="container_image" src="images/imambda.jpg" alt="Hawa Mahal">
-                    <div class="desc">This is description of Hawa Mahal.</div>
-                </div>
-
-                <div class="container">
-                    <img class="container_image" src="images/lotustemple.jpg" alt="Hawa Mahal">
-                    <div class="desc">This is description of Hawa Mahal.</div>
-                </div>
-
             </div>
         </main>
 
